ufw (0.18) UNRELEASED; urgency=low

  * bump version
  * src/ufw: make reusable
  * src/ufw: show default policy and logging in 'status' (LP: #240271)
  * refactor code and split out into modules:
    - updated src/*
    - updated setup.py
    - updated run_tests.sh
    - updated README
    - updated README.translations and messages/ufw.pot

 -- Jamie Strandboge <jamie@ubuntu.com>  Thu, 12 Jun 2008 10:28:36 -0400

ufw (0.17) intrepid; urgency=low

  * implement status in initscript
  * warn on group/world writable and wrong owner files in _do_checks()
  * debian/rules: use 'g' with sed when stripping paths (LP: #207476)
  * debian/control: Standards-Version: 3.7.3
  * don't log INVALID packets by default (LP: #207156)
  * don't log noisy services by default (LP: #209709)
  * consult /etc/services for protocol (LP: #209845)
  * manpage updates
  * add internationalization support
  * prevent traceback with dotted decimal netmasks (LP: #224842)
  * update tests to test for more valid and invalid netmasks
  * adjust conf/sysctl.conf to have clear message regarding /etc/sysctl.conf
  * adjust conf/sysctl.conf to have explanations for the tunables (taken from
    procps)

 -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 12 Mar 2008 16:11:22 -0400

ufw (0.16) hardy; urgency=low

  * bump version
  * fix tests for when ipv6 is blacklisted (fix FTBFS on Ubuntu buildd)
  * adjust root tests for new output

 -- Jamie Strandboge <jamie@ubuntu.com>  Tue, 11 Mar 2008 16:11:59 -0400

ufw (0.15) hardy; urgency=low

  * fix man page typo
  * debian/control: added Homepage (LP: #199722)
  * fix python version check (upstream #199790)
  * properly handle when ipv6 is not loaded or blacklisted (LP: #199724)
  * man page fixes
  * clarify 'status' output (LP: #199873)
  * fix ipv6 stateless autoconfiguration (upstream #200921)

 -- Jamie Strandboge <jamie@ubuntu.com>  Sat, 08 Mar 2008 07:36:04 -0500

ufw (0.14) hardy; urgency=low

  * conf/initscript