@@ -9,6 +9,10 @@ ufw (0.18) UNRELEASED; urgency=low
     - updated run_tests.sh
     - updated README
     - updated README.translations and messages/ufw.pot
+  * properly implement --root and --home (LP: #231771):
+    - setup.py: --root works as expected now (eg as DESTDIR in Debian)
+    - updated run_test.sh for new setup.py
+    - updated README.Debian for now setup.py
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Thu, 12 Jun 2008 10:28:36 -0400
 
